exposed User get methods on API
