# src/controllers/UserController.ts
@@ -1,6 +1,5 @@
 import { Request, Response, NextFunction } from 'express';
 import { App } from '../App';
-import { Resolver } from 'dns';
 
 export class UserController {
     app: App;
@@ -8,6 +7,19 @@ export class UserController {
     constructor(app: App) {
         this.app = app;
     }
+
+    getUser = async (req: Request, res: Response, next: NextFunction) => {
+        let { id } = req.query;
+        let user = await this.app.getUser(id as string);
+        res.json(user);
+        res.send();
+    }
+
+    getUserList = async (req: Request, res: Response, next: NextFunction) => {
+        let userList = await this.app.getUserList();
+        res.json(userList);
+        res.send();
+    }    
 
     createUser = async (req: Request, res: Response, next: NextFunction) => {
         const { name } = req.body;
